--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -508,18 +508,43 @@ h3 {
     color: #3B34A6;
 }
 
-.btn-phone,
-.btn-phone:active,
-.btn-phone:focus,
-.btn-phone:hover,
-.btn-phone:active:focus,
-.btn-phone:active:hover {
-    border-radius: 5px;
+.btn-primary,
+.btn-primary:active,
+.btn-primary:focus,
+.btn-primary:hover,
+.btn-primary:active:focus,
+.btn-primary:active:hover {
+    background-color: #3B34A6;
+    border: 0;
+    border-radius: 24px;
+    padding: 15px 10px;
+    min-width: 155px;
+    text-align: center;
     font-size: 12px;
     font-weight: 700;
+}
+
+.btn-primary.btn-phone,
+.btn-primary.btn-phone:active,
+.btn-primary.btn-phone:focus,
+.btn-primary.btn-phone:hover,
+.btn-primary.btn-phone:active:focus,
+.btn-primary.btn-phone:active:hover {
+    border-radius: 5px;
     color: #FFFFFF;
-    padding: 15px 10px;
-    background-color: #3B34A6;
+    min-width: auto;
+}
+
+.btn-primary.btn-order,
+.btn-primary.btn-order:active,
+.btn-primary.btn-order:focus,
+.btn-primary.btn-order:hover,
+.btn-primary.btn-order:active:focus,
+.btn-primary.btn-order:active:hover {
+    padding: 10px 70px;
+    color: #FFFFFF;
+    border-radius: 30px;
+    font-size: 25px;
 }
 
 .btn-default,
@@ -537,20 +562,7 @@ h3 {
     font-weight: 700;
 }
 
-.btn-order,
-.btn-order:active,
-.btn-order:focus,
-.btn-order:hover,
-.btn-order:active:focus,
-.btn-order:active:hover {
-    background-color: #3B34A6;
-    padding: 10px 70px;
-    color: #FFFFFF;
-    border-radius: 30px;
-    font-size: 25px;
-}
-
-.btn-order span {
+.btn-primary.btn-order span {
     font-size: 42px;
     font-weight: 700;
 }
@@ -1049,4 +1061,25 @@ header .top {
     padding: 15px 0;
 }
 
-.how-to .item
+/* consultation-form */
+
+.consultation-form {
+    padding-bottom: 20px;
+}
+
+.form-control,
+textarea {
+    border: 0;
+    background-color: #F6F6F6;
+    padding: 25px;
+    box-shadow: none;
+    width: 100%;
+}
+
+.form-control {
+    height: 64px;
+}
+
+.consultation-form .form-buttons {
+    text-align: center;
+}
