--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -20,9 +20,10 @@ body {
 
 .footer {
     height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
+    background-color: #101C36;
+    border-top: 0;
     padding-top: 20px;
+    color: #FFFFFF;
 }
 
 .jumbotron {
