--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -563,6 +563,16 @@ h3 {
     font-weight: 700;
 }
 
+.btn-default.btn-get-consultation,
+.btn-default.btn-get-consultation:active,
+.btn-default.btn-get-consultation:focus,
+.btn-default.btn-get-consultation:hover,
+.btn-default.btn-get-consultation:active:focus,
+.btn-default.btn-get-consultation:active:hover {
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
 .btn-primary.btn-order span {
     font-size: 42px;
     font-weight: 700;
@@ -773,11 +783,6 @@ header .top {
 
 .get-consultation .heading h2 {
     color: #FFFFFF;
-}
-
-.get-consultation .btn-default {
-    text-transform: uppercase;
-    font-size: 16px;
 }
 
 .get-consultation span {
