--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -697,6 +697,28 @@ header .top {
     background-color: #FFFFFF;
 }
 
+.slider .flex-caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+}
+
+.slider .flex-caption .slide-row .item {
+    flex-basis: 50%;
+    padding: 0 35px;
+    border-right: 1px solid #ffffff;
+}
+
+.slider .flex-caption .slide-row .item.item-small {
+    flex-basis: 25%;
+}
+
+.slider .slides li {
+    position: relative;
+}
+
 .advantages {
     background-color: #F5F5F5;
     padding: 50px 0;
