--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -174,6 +174,7 @@ a.desc:after {
 
 /* админ панель */
 .admin-panel{
+    display: none;
     height: 85px;
     width: 100%;
     background-color: #2f4050;
