Adaptive look for get-consultation section (front page)

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -1349,6 +1349,10 @@ textarea {
         max-width: 250px;
         margin-bottom: 20px;
     }
+    .get-consultation .heading,
+    .get-consultation .buttons {
+        text-align: center;
+    }
 }
 
 @media all and (max-width: 600px) {
