--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -1330,18 +1330,12 @@ textarea {
     .navbar-collapse {
         border: 0;
     }
-    .slider {
-        display: none;
-    }
-    /*
     .slider .flex-caption {
         top: 45%;
         left: 0;
         transform: translate(0%, -50%);
     }
-    */
     /* TODO: Префиксы. */
-    /*
     .slider .flex-caption .slide-row {
         flex-wrap: wrap;
     }
@@ -1355,7 +1349,9 @@ textarea {
     .slider .flex-caption .slide-text {
         padding: 20px;
     }
-    */
+    .slider .flex-control-nav {
+        display: none;
+    }
     .advantages .item-wrapper {
         text-align: center;
     }
