--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -559,6 +559,7 @@ h3 {
 .btn-default.btn-get-consultation:active:hover {
     text-transform: uppercase;
     font-size: 16px;
+    white-space: normal;
 }
 
 .btn-primary.btn-order span {
@@ -1398,6 +1399,10 @@ textarea {
 }
 
 @media all and (max-width: 767px) {
+    h2,
+    .h2 {
+        font-size: 30px;
+    }
     header {
         position: relative;
         top: auto;
@@ -1487,6 +1492,10 @@ textarea {
     }
     .why-we .grid .item {
         background-size: 100% auto;
+        padding: 20px;
+    }
+    .why-we .grid .item h3 {
+        font-size: 30px;
     }
     /* TODO: Префиксы. */
     .how-to .how-to-grid .flex {
