--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -593,6 +593,11 @@ h3 {
     font-weight: 700;
 }
 
+.heading {
+    text-align: center;
+    padding: 40px 0;
+}
+
 .heading h2 {
     font-weight: 700;
     color: #3B34A6;
