--- a/frontend/web/css/site-admin.css
+++ b/frontend/web/css/site-admin.css
@@ -1,3 +1,100 @@
+/* Additional Bootstrap classes */
+.col-xlg-1,
+.col-xlg-2,
+.col-xlg-3,
+.col-xlg-4,
+.col-xlg-5,
+.col-xlg-6,
+.col-xlg-7,
+.col-xlg-8,
+.col-xlg-9,
+.col-xlg-10,
+.col-xlg-11,
+.col-xlg-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+}
+@media all and (min-width: 1440px) {
+    .col-xlg-12 {
+        width: 100%;
+    }
+    .col-xlg-11 {
+        width: 91.66666667%;
+    }
+    .col-xlg-10 {
+        width: 83.33333333%;
+    }
+    .col-xlg-9 {
+        width: 75%;
+    }
+    .col-xlg-8 {
+        width: 66.66666667%;
+    }
+    .col-xlg-7 {
+        width: 58.33333333%;
+    }
+    .col-xlg-6 {
+        width: 50%;
+    }
+    .col-xlg-5 {
+        width: 41.66666667%;
+    }
+    .col-xlg-4 {
+        width: 33.33333333%;
+    }
+    .col-xlg-3 {
+        width: 25%;
+    }
+    .col-xlg-2 {
+        width: 16.66666667%;
+    }
+    .col-xlg-1 {
+        width: 8.33333333%;
+    }
+    .col-xlg-offset-12 {
+        margin-left: 100%;
+    }
+    .col-xlg-offset-11 {
+        margin-left: 91.66666667%;
+    }
+    .col-xlg-offset-10 {
+        margin-left: 83.33333333%;
+    }
+    .col-xlg-offset-9 {
+        margin-left: 75%;
+    }
+    .col-xlg-offset-8 {
+        margin-left: 66.66666667%;
+    }
+    .col-xlg-offset-7 {
+        margin-left: 58.33333333%;
+    }
+    .col-xlg-offset-6 {
+        margin-left: 50%;
+    }
+    .col-xlg-offset-5 {
+        margin-left: 41.66666667%;
+    }
+    .col-xlg-offset-4 {
+        margin-left: 33.33333333%;
+    }
+    .col-xlg-offset-3 {
+        margin-left: 25%;
+    }
+    .col-xlg-offset-2 {
+        margin-left: 16.66666667%;
+    }
+    .col-xlg-offset-1 {
+        margin-left: 8.33333333%;
+    }
+    .col-xlg-offset-0 {
+        margin-left: 0;
+    }
+}
+
 .btn,
 .btn:not(.btn-link):not(.btn-circle) {
     border-radius: 15px;
@@ -741,4 +838,10 @@ textarea.form-control {
 
 .object-page table.detail-view.object-address > tbody > tr > td {
     width: 70%;
+}
+
+@media all and (max-width: 991px) {
+    .catalog-page .search-filters .buttons > * {
+        margin-bottom: 10px;
+    }
 }
